ToDo Enhacements: Filter hinzugefügt